rename ThirdParty to public
